# agent-delegation

./: .gitignore  .mcp.json  .task-spec.md  CHANGELOG.md  ISSUES.md  README.md  skills.sh.json
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
docs/: ORCHESTRATOR.md  agent-notifications.md  compatibility.md  pi-profiles.md  pi-prompt-layering.md  radical-cleanup-plan.md  state-model.md
docs/plans/: ponytail-integration-plan.md
docs/research/: pi-worker-status-widget.md
examples/: skill-use-claude.md  skill-use-codex.md  skill-use-generic-agent.md  skill-use-hermes.md  spawn-claude.json  spawn-codex.json  spawn-pi.json  spawn-shell-harness.json  spawn-shell.json  worktree-shell.json
hooks/: hooks.json
mcp/agent-delegation-mcp/: README.md  pyproject.toml
mcp/agent-delegation-mcp/src/agent_delegation_mcp/: __init__.py  backend.py  models.py  runtime.py  server.py
mcp/agent-delegation-mcp/tests/: test_backend_shell.py  test_harnesses.py  test_models.py  test_repo_layout.py  test_runtime.py  test_state_dir.py  test_timeout.py  test_worktree.py
mcp/agent-delegation-mcp/tests/integration/: test_claude_runtime.py  test_codex_runtime.py  test_pi_runtime.py
plugins/agent-delegation/.claude-plugin/: plugin.json
plugins/agent-delegation/docs/: delegation-contract.md
skills/agent-delegation/: SKILL.md
skills/board-onboard/: SKILL.md
skills/board-run-ready/: SKILL.md
skills/cmux-agent-workflows/: SKILL.md
tests/: test_agent_readiness_probe.sh  test_board_render.sh  test_poll_wait.sh
tests/fixtures/: issues.sample.json
(+69 files in other folders)
